# wagtail-hallo

./: .coveragerc  .flake8  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.circleci/: config.yml  report_nightly_build_failure.py  trigger-nightly-build.sh
.github/: report_nightly_build_failure.py
.github/workflows/: ci.yml  nightly-tests.yml  publish.yml  test.yml
wagtail_hallo/: __init__.py  apps.py  hallo.py  plugins.py  wagtail_hooks.py
wagtail_hallo/static/css/: hallo.css  icons.css
wagtail_hallo/static/js/: hallo-editor.js  hallo-telepath.js
wagtail_hallo/static/js/hallo-plugins/: hallo-hr.js  hallo-requireparagraphs.js  hallo-wagtaildoclink.js  hallo-wagtailembeds.js  hallo-wagtailimage.js  hallo-wagtaillink.js
wagtail_hallo/test/: __init__.py  apps.py  hallo.test.js  models.py  settings.py  urls.py  wagtail_hooks.py
wagtail_hallo/test/fixtures/: test.json
wagtail_hallo/test/migrations/: 0001_initial.py  0002_richtextfieldwithfeaturespage.py
wagtail_hallo/test/tests/: hallo.test.js  test_dbwhitelister.py  test_hallo.py  test_hallo_plugins.py  utils.py
wagtail_legacy_hallo_editor/: __init__.py  apps.py  hallo.py  plugins.py  wagtail_hooks.py
wagtail_legacy_hallo_editor/static/css/: hallo.css
wagtail_legacy_hallo_editor/static/js/: hallo-editor.js  hallo-telepath.js
wagtail_legacy_hallo_editor/static/js/hallo-plugins/: hallo-hr.js  hallo-requireparagraphs.js  hallo-wagtaildoclink.js  hallo-wagtailembeds.js  hallo-wagtailimage.js  hallo-wagtaillink.js
wagtail_legacy_hallo_editor/static/wagtail_legacy_hallo_editor/js/: .gitignore
wagtail_legacy_hallo_editor/templates/wagtail_wagtail_legacy_hallo_editor/widgets/: hallo_rich_text_area.html
wagtail_legacy_hallo_editor/test/: __init__.py  apps.py  models.py  settings.py
wagtail_legacy_hallo_editor/test/testapp/: models.py
wagtail_legacy_hallo_editor/test/testapp/templates/: hallo_test_page.html
wagtail_legacy_hallo_editor/test/tests/: test_dbwhitelister.py  test_hallo.py  utils.py
